test/compile_errors/stage1/obj/redefinition_of_enums.zig
const A = enum {x};
const A = enum {x};

// redefinition of enums
//
// tmp.zig:2:1: error: redeclaration of 'A'
// tmp.zig:1:1: note: other declaration here
